Update environmental pages content

--- a/entreprises-firms-eng.html
+++ b/entreprises-firms-eng.html
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Ships Repair Firms</h1>
+<h1>Ship Repair Firms</h1>
 				<p>These links are provided solely for the convenience of Public Works and Government
 					of Canada (PWGSC) website users. <abbr title="Public Works and Government Services Canada">PWGSC</abbr> is not responsible for the information
 					found on them. Some of these links are to organizations or other entities that
