--- a/env/politique-policy-eng.html
+++ b/env/politique-policy-eng.html
@@ -10,9 +10,10 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-eng.html -->
 <!-- TitleStart -->
-<title>Notices - EGD - PWGSC</title>
+<title>Environmental Policy Statement - EGD - PWGSC</title>
 <!-- TitleEnd -->
-<!-- MetadataStart --><meta name="description" content="It is the goal of the Esquimalt Graving Dock to be the premier ship building and repair facility on the west coast of North America. The Esquimalt Graving Dock and its tenants realize that environmental management is an integral part of attaining that goal, and we are committed to ensuring that our operations do not have a negative impact on the environment or the health and safety of our employees and neighbours." />
+<!-- MetadataStart -->
+<meta name="description" content="It is the goal of the Esquimalt Graving Dock to be the premier ship building and repair facility on the west coast of North America. The Esquimalt Graving Dock and its tenants realize that environmental management is an integral part of attaining that goal, and we are committed to ensuring that our operations do not have a negative impact on the environment or the health and safety of our employees and neighbours." />
 <meta name="dcterms.description" content="It is the goal of the Esquimalt Graving Dock to be the premier ship building and repair facility on the west coast of North America. The Esquimalt Graving Dock and its tenants realize that environmental management is an integral part of attaining that goal, and we are committed to ensuring that our operations do not have a negative impact on the environment or the health and safety of our employees and neighbours." />
 <meta name="dcterms.creator" content="Government of Canada, Public Works and Government Services Canada" />
 <meta name="dcterms.title" content="Environmental Policy Statement - EGD - PWGSC" />
@@ -47,7 +48,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <ol>
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-eng.html" -->
 <!--#include virtual="/pac/cse-egd/includes/pain-bread-section-eng.html" -->
-<li>Notices</li>
+<li>Environmental Policy Statement</li>
 </ol>
 </div></div>
 </nav>
@@ -56,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Notices</h1>
+<h1>Environmental Policy Statement</h1>
         <p>
           It is the goal of the Esquimalt Graving Dock, in partnership
           with the ship repair industry, to be the premier
