--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -10,9 +10,10 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-eng.html -->
 <!-- TitleStart -->
-<title>Notices - EGD - PWGSC</title>
+<title>Environment - EGD - PWGSC</title>
 <!-- TitleEnd -->
-<!-- MetadataStart --><meta name="description" content="Esquimalt Graving Dock's environmental program." />
+<!-- MetadataStart -->
+<meta name="description" content="Esquimalt Graving Dock's environmental program." />
 <meta name="dcterms.description" content="Esquimalt Graving Dock's environmental program." />
 <meta name="dcterms.creator" content="Government of Canada, Public Works and Government Services Canada" />
 <meta name="dcterms.title" content="Environmental Program - EGD - PWGSC" />
@@ -47,7 +48,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <ol>
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-eng.html" -->
 <!--#include virtual="/pac/cse-egd/includes/pain-bread-section-eng.html" -->
-<li>Notices</li>
+<li>Environment</li>
 </ol>
 </div></div>
 </nav>
@@ -56,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Notices</h1>
+<h1>Environment</h1>
 			<img src="../images/dock-cale-2.jpg" alt="" width="300" height="400" style="float: right; padding-left: 10px;" />
 
       <p>
