--- a/env/projects-projets-eng.html
+++ b/env/projects-projets-eng.html
@@ -10,17 +10,22 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-eng.html -->
 <!-- TitleStart -->
-<title>Notices - EGD - PWGSC</title>
+<title>Water Lot Remediation Project - EGD - PWGSC</title>
 <!-- TitleEnd -->
-<!-- MetadataStart --><meta name="description" content="EGD Leading the Way with ISO 14001" />
-<meta name="dcterms.description" content="EGD Leading the Way with ISO 14001" />
-<meta name="dcterms.creator" content="Government of Canada, Public Works and Government Services Canada" />
-<meta name="dcterms.title" content="Leading the Way with ISO 14001 - EGD - PWGSC" />
-<meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
-<meta name="dcterms.modified" title="W3CDTF" content="2011-12-16" />
-<meta name="dcterms.subject" title="gccore" content="Ships; Wharfs; Environment; Information;  Indexes" />
-<meta name="dcterms.language" title="ISO639-2" content="eng" />
-<meta name="keywords" content="Esquimalt Graving Dock, ISO 14001, environment, management, programs, health;, safety" />
+<!-- MetadataStart -->
+<meta name="description" content="Water Lot Remediation Project" />
+<meta name="dcterms.description" content="Water Lot Remediation Project" />
+<meta name="dc.title" content="Water Lot Remediation Project - EGD - PWGSC" />
+<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Environment; Information;  Indexes" />
+
+<meta name="dc.language" scheme="ISO639-2/T" content="eng" />
+<meta name="dc.creator" content="Government of Canada, Public Works and Government Services Canada" />
+<meta name="dc.publisher" content="Government of Canada, Public Works and Government Services Canada" />
+<meta name="dc.rights" content="http://www.tpsgc-pwgsc.gc.ca/comm/ai-in-eng.html" />
+<meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
+<meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
+
+<meta name="keywords" content="Water Lot Remediation Project, environment, management, programs, health, safety" />
 <!-- MetadataEnd -->
 <!--#include virtual="/boew-wet/wet3.0/html5/includes/tete-head.html" -->
 
@@ -47,7 +52,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <ol>
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-eng.html" -->
 <!--#include virtual="/pac/cse-egd/includes/pain-bread-section-eng.html" -->
-<li>Notices</li>
+<li>Water Lot Remediation Project</li>
 </ol>
 </div></div>
 </nav>
@@ -56,17 +61,25 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Notices</h1>
+<h1>Water Lot Remediation Project</h1>
         <p>
-          The Esquimalt Graving Dock (EGD) has a number of exciting changes both in the planning and the developmental stages.  The primary project will be the installation of a new 30&nbsp;tonne double boom level luffing crane that will be erected on the south side of the basin dock.  Preporation for the erection of the new crane is scheduled to commence in April,&nbsp;2010. The approximate date that the new 30&nbsp;tonne crane will be in service is the end of July,&nbsp;2010.  Following the erection and commissioning of the new crane on the south side of the basin dock work will then commence immediately on dismantling our existing 30&nbsp;tonne crane for refurbishment and modernization of its motors and drives.  The existing 30&nbsp;tonne crane will be disassembled piece by piece and placed in dock bottom in Section&nbsp;#&nbsp;3. There it will be inspected completely and repaired, where required, then reassembled on the north side of the basin dock on the tracks of our current 44&nbsp;tonne hammerhead crane.  This work is scheduled to begin immediately following the commissioning of the new crane approximatley the end of July,&nbsp;2010.  The contractor for this project will utilize space in dock bottom in Section&nbsp;#&nbsp;3 as well as the areas adjacent to Section&nbsp;#&nbsp;3 top side for their work area on this crane.  The refurbishment and modernization of the <abbr title="Esquimalt Graving Dock">EGD</abbr>'s current 30&nbsp;tonne crane will run from July,&nbsp;2010 through to approximately November,&nbsp;2010.  Once our existing 30&nbsp;tonne crane is assembled and is back in service on the north side of the basin dock work will then commence on the removal of our 44&nbsp;tonne hammerhead crane from the north side of the basin dock.  
-        </p>
+          The Esqumalt Graving Dock has been used for the repair and maintenance of military and civilian vessels since&nbsp;1927 and has contributed to sediment contamination in the seabed adjacent to the facility. This project will ensure that the water lot is remediated to meet federal and provincial environmental standards.</p>
+		  
+		  
+<p>The project involves three components: dredging the contaminated sediment and disposing of it in licensed landfills; constructing an erosion protection sheet pile wall around the south jetty to isolate the contamination under the jetty; and creating new fish habitat.</p>
 
-        <p>
-          In addition to the above projects the Esquimalt Graving Dock is seeking funding for a 100&nbsp;foot extension of the basin dock east from the east wall of Section&nbsp;#&nbsp;3.  The answer to our funding request for this work will be known some time in February,&nbsp;2010.  The 100&nbsp;foot extension will facilitate extended docking periods for the <abbr title="Department of National Defense">DND</abbr> frigate mid life refit project, as well as allow the docking of a number of the larger vessels from the <abbr title="British Columbia">BC</abbr> Ferries fleet in only one section. This will leave approximately 750&nbsp;feet of dry dock for other refit and repair work. We understand that the complete closure of Section&nbsp;#&nbsp;3 will be an inconvenience for all from approximately May,&nbsp;2010 through to the end of March,&nbsp;2011 but we think that all would agree that this relatively short term inconvenience, approximately 10&nbsp;months, will benefit all for the long term with additional dry docking space.
-        </p>
+<p>The <abbr title="Esqumalt Graving Dock">EGD</abbr> Water Lot Remediation Project is funded by the Federal Contaminated Sites Action Plan, which is coordinated by Environment Canada and the Treasury Board to provide funding to assess and remediate federal contaminated sites.</p>
 
-        <p>
-        If anyone has any questions on any of the above or would like further information please do not hesitate to contact <a href="mailto:david.latoski@pwgsc-tpsgc.gc.ca">David Latoski</a>, Operations Manager, Esquimalt Graving Dock at 250-363-8056.  
+<p><abbr title="Public Works and Government Services Canada">PWGSC</abbr> proposes to address the major objectives of the project through the following key steps:</p>
+<ul>
+<li>planning for remediation works, including supplementary investigations, options analysis, permit/approval acquisition, remedial design, and contracting;
+</li><li>remediating the majority of sediment contamination through removal to offsite disposal facilities;
+</li><li>carrying out risk management on a small portion of sediment contamination that will remain on the site; and
+</li><li>conducting post-remediation confirmatory sampling and monitoring.
+</li></ul>
+
+<p>The primary contaminants of concern include metals (i.e., arsenic, copper, lead, and zinc), polychlorinated biphenyls (PCBs), and polycyclic aromatic hydrocarbons (PAHs).</p>
+
         </p>
 </div></div>
 <div id="wb-sec"><div id="wb-sec-in">
