--- a/env/simple-eng.html
+++ b/env/simple-eng.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-eng.html -->
 <!-- TitleStart -->
-<title>Notices - EGD - PWGSC</title>
+<title>Keeping It Simple - EGD - PWGSC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart --><meta name="description" content="Bubble curtain saves fish, seals, and valuable time" />
 <meta name="dcterms.description" content="Bubble curtain saves fish, seals, and valuable time" />
@@ -47,7 +47,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <ol>
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-eng.html" -->
 <!--#include virtual="/pac/cse-egd/includes/pain-bread-section-eng.html" -->
-<li>Notices</li>
+<li>Keeping It Simple</li>
 </ol>
 </div></div>
 </nav>
@@ -56,12 +56,8 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Notices</h1>
-				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:350px;">
-					<img src="../images/keeping-it-simple-1.jpg" alt="" width="350" height="229" /><br />
-					Before the installation of the bubble curtain, seals would often
-					find their way into the Esquimalt Graving Dock. Here, a visitor is gently
-					escorted out of the dock before ship repairs begin. </div>
+<h1>Keeping It Simple</h1>
+      <div class="span-4">
 				<p>The new bubble curtain at the Esquimalt Graving Dock is saving hundreds
 					of salmon and keeping shipyards running smoothly.</p>
 				<p>The <abbr title="Public Works and Government Services Canada">PWGSC</abbr>-owned dock in Victoria, <abbr title="British Columbia">BC</abbr>, is a world-class water vessel repair
@@ -71,7 +67,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 					<abbr title="Public Works and Government Services Canada">PWGSC</abbr> leases space to private shipyards, which work on <abbr title="British Columbia">BC</abbr>
 					Ferries, cruise ships, and other vessels. About 70&nbsp;ships
 					come in and out every year.</p>
-				<h2>Unwanted Visitors </h2>
+				<h2>Unwanted Visitors</h2>
 				<p>Up until recently, the challenge was the uninvited guests that came in
 					with the ships when they entered the dock. When the water
 					was drained, dozens of fish and the odd seal were being trapped
@@ -101,13 +97,32 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 					so many. We were told to try to save the female coho salmon
 					and we were there until four in the morning with all the
 					repair work on hold.&quot;</p>
+        </div>
+      <div class="span-2">
+        <p>
+					<img src="../images/keeping-it-simple-1.jpg" alt="" />
+        </p>
+        <p>
+          <strong>Caption:</strong>
+					Before the installation of the bubble curtain, seals would often
+					find their way into the Esquimalt Graving Dock. Here, a visitor is gently
+					escorted out of the dock before ship repairs begin. 
+        </p>
+      </div>
+      <div class="clear"></div>
 				<h2>A Creative Answer</h2>
-				<div class="smallFont" style="font-weight:bold; float:left; padding-right:10px; width:200px;">
-					<img src="../images/keeping-it-simple-2.jpg" alt="" width="200" height="238" /><br />
-					A
+        <div class="span-2">
+        <p>
+					<img src="../images/keeping-it-simple-2.jpg" alt="" />
+        </p>
+        <p class="margin-bottom-none">
+        <strong>Caption:</strong> A
 					black pipe down the wall and a white pipe along the bottom
 					of the Esquimalt Graving Dock release a curtain of air bubbles
-					that prevent seals and fish from entering the dock with ships. </div>
+					that prevent seals and fish from entering the dock with ships. 
+        </p>
+        </div>
+        <div class="span-4">
 				<p>Mr. Anderson, who has a background in the pipeline industry, was asked
 					to come up with a solution. His research revealed a bubble
 					curtain that was used at some fish hatcheries and dams, and
@@ -130,6 +145,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 					was only $700.</p>
 				<p>&quot;This is a real success,&quot; says Mr. Lawes. &quot;Everyone is pleased. Sometimes
 					the best solutions are the simplest.&quot; </p>
+          </div>
 </div></div>
 <div id="wb-sec"><div id="wb-sec-in">
 <!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
