--- a/env/voie-way-eng.html
+++ b/env/voie-way-eng.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-eng.html -->
 <!-- TitleStart -->
-<title>Notices - EGD - PWGSC</title>
+<title>Leading the Way with ISO 14001 - EGD - PWGSC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart --><meta name="description" content="EGD Leading the Way with ISO 14001" />
 <meta name="dcterms.description" content="EGD Leading the Way with ISO 14001" />
@@ -47,7 +47,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <ol>
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-eng.html" -->
 <!--#include virtual="/pac/cse-egd/includes/pain-bread-section-eng.html" -->
-<li>Notices</li>
+<li>Leading the Way with ISO 14001</li>
 </ol>
 </div></div>
 </nav>
@@ -56,7 +56,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Notices</h1>
+<h1>Leading the Way with ISO 14001</h1>
 				<p>by Dan del Villano</p>
 				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:200px;"><img src="../images/leading-the-way.jpg" alt="" width="200" height="124" /><br />
 					Jim Milne (centre) and Environmental Coordinators, Daryl Lawes and Rae-Ann Shaw, on site at the Esquimalt Graving Dock.</div>When it comes to technology, most people think of machines. Pacific Region's
