--- a/env/barrage-boom-eng.html
+++ b/env/barrage-boom-eng.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-eng.html -->
 <!-- TitleStart -->
-<title>Notices - EGD - PWGSC</title>
+<title>Lowering the Boom on Oil Spills - EGD - PWGSC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart --><meta name="description" content="Lowering the Boom on Oil Spills" />
 <meta name="dcterms.description" content="Lowering the Boom on Oil Spills" />
@@ -47,7 +47,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <ol>
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-eng.html" -->
 <!--#include virtual="/pac/cse-egd/includes/pain-bread-section-eng.html" -->
-<li>Notices</li>
+<li>Lowering the Boom on Oil Spills</li>
 </ol>
 </div></div>
 </nav>
@@ -56,7 +56,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Notices</h1>
+<h1>Lowering the Boom on Oil Spills</h1>
 				<p>by Dan del Villano </p>
 				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:300px;">
 					<img src="../images/lowering-the-boom-1.jpg" alt="" width="300" height="199" /><br />
