--- a/env/ecocivisme-environment-eng.html
+++ b/env/ecocivisme-environment-eng.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-eng.html -->
 <!-- TitleStart -->
-<title>Notices - EGD - PWGSC</title>
+<title>A Good Environmental Citizen - EGD - PWGSC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart --><meta name="description" content="EGD: A Good Environmental Citizen" />
 <meta name="dcterms.description" content="EGD: A Good Environmental Citizen" />
@@ -47,7 +47,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <ol>
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-eng.html" -->
 <!--#include virtual="/pac/cse-egd/includes/pain-bread-section-eng.html" -->
-<li>Notices</li>
+<li>A Good Environmental Citizen</li>
 </ol>
 </div></div>
 </nav>
@@ -56,7 +56,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Notices</h1>
+<h1>A Good Environmental Citizen</h1>
 				<p>by Roy John<br />
 					Team Leader, Registration Services &ndash; Environmental, Health
 						and Safety Systems
