--- a/env/ecocivisme-environment-fra.html
+++ b/env/ecocivisme-environment-fra.html
@@ -10,13 +10,13 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
 <!-- TitleStart -->
-<title>CSE : un exemple d'écocivisme - CSE - TPSGC</title>
+<title>CSE : un exemple d'&eacute;cocivisme - CSE - TPSGC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
-<meta name="description" content="CSE : un exemple d'écocivisme" />
-<meta name="dcterms.description" content="CSE : un exemple d'écocivisme" />
+<meta name="description" content="CSE : un exemple d'&eacute;cocivisme" />
+<meta name="dcterms.description" content="CSE : un exemple d'&eacute;cocivisme" />
 <meta name="dcterms.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
-<meta name="dcterms.title" content="CSE : un exemple d'écocivisme - CSE - TPSGC" />
+<meta name="dcterms.title" content="CSE : un exemple d'&eacute;cocivisme - CSE - TPSGC" />
 <meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" title="W3CDTF" content="2011-12-16" />
 <meta name="dcterms.subject" title="gccore" content="Navire; Quai; Environnement; Information;  Index" />
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
 <!-- MainContentStart -->
-<h1 id="wb-cont">CSE : un exemple d'écocivisme</h1>
+<h1 id="wb-cont">CSE : un exemple d'&eacute;cocivisme</h1>
 				<p>par  Roy John<br />
 					chef d'&eacute;quipe, 
 Services d'enregistrement &ndash; Environnement, Syst&egrave;mes de sant&eacute; et de s&eacute;curit&eacute;
