Add wb-cont id to h1 tags

--- a/avis-notices-eng.html
+++ b/avis-notices-eng.html
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Notices</h1>
+<h1 id="wb-cont">Notices</h1>
 
 <h2>New Electrical Lockout, Policy, Procedures &amp; Records</h2>
 
