--- a/cn-cu-eng.html
+++ b/cn-cu-eng.html
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Contact <abbr title="Esquimalt Graving Dock">EGD</abbr></h1>
+<h1 id="wb-cont">Contact <abbr title="Esquimalt Graving Dock">EGD</abbr></h1>
 				<p><strong> Before you contact us, please read our <a href="#con-pri">Privacy
 				Notice Statement</a>.</strong></p>
 
