--- a/conduite-conduct-eng.html
+++ b/conduite-conduct-eng.html
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Code of Conduct</h1>
+<h1 id="wb-cont">Code of Conduct</h1>
 				<h2><strong>ARTICLE&nbsp;1</strong></h2>
 				<h3><strong>OBJECT AND GUIDING PRINCIPLES</strong></h3>
 				<p><strong>1.1&nbsp;Object of Code</strong>. <em> Conducting business at the Esquimalt Graving Dock (EGD) is a privilege, not a right.</em> The object of this Code is to establish and articulate the corporate values, responsibilities, obligations and ethical policies that all businesses, as applicable, are to prescribe to <em>while operating at the Esquimalt Graving Dock</em>. </p>
