--- a/dimensions-eng.html
+++ b/dimensions-eng.html
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>About the Dock</h1>
+<h1 id="wb-cont">About the Dock</h1>
 				<p>The Esquimalt Graving Dock's dimensions measure 357.5&nbsp;metres by 38.4&nbsp;metres &ndash; or about 1,200&nbsp;feet long by 135&nbsp;feet wide. The north landing jetty is
 					305&nbsp;metres long (1000&nbsp;feet) and contains 10&nbsp;metres of water (30&nbsp;feet) at
 					low tide. There is another 305&nbsp;metres (1000&nbsp;feet) of berth frontage at the
