--- a/entreprises-firms-eng.html
+++ b/entreprises-firms-eng.html
@@ -10,7 +10,6 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-eng.html -->
 <!-- TitleStart -->
-<title>Ships Repair Firms - EGD - PWGSC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="Esquimalt Graving Dock ship repair firms." />
@@ -57,7 +56,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Ship Repair Firms</h1>
+<h1 id="wb-cont">Ship Repair Firms</h1>
 				<p>These links are provided solely for the convenience of Public Works and Government
 					of Canada (PWGSC) website users. <abbr title="Public Works and Government Services Canada">PWGSC</abbr> is not responsible for the information
 					found on them. Some of these links are to organizations or other entities that
