--- a/env/barrage-boom-eng.html
+++ b/env/barrage-boom-eng.html
@@ -56,7 +56,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Lowering the Boom on Oil Spills</h1>
+<h1 id="wb-cont">Lowering the Boom on Oil Spills</h1>
 				<p>by Dan del Villano </p>
 				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:300px;">
 					<img src="../images/lowering-the-boom-1.jpg" alt="" width="300" height="199" /><br />
