--- a/env/ecocivisme-environment-eng.html
+++ b/env/ecocivisme-environment-eng.html
@@ -56,7 +56,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>A Good Environmental Citizen</h1>
+<h1 id="wb-cont">A Good Environmental Citizen</h1>
 				<p>by Roy John<br />
 					Team Leader, Registration Services &ndash; Environmental, Health
 						and Safety Systems
