--- a/env/politique-policy-eng.html
+++ b/env/politique-policy-eng.html
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Environmental Policy Statement</h1>
+<h1 id="wb-cont">Environmental Policy Statement</h1>
         <p>
           It is the goal of the Esquimalt Graving Dock, in partnership
           with the ship repair industry, to be the premier
