--- a/env/projects-projets-eng.html
+++ b/env/projects-projets-eng.html
@@ -61,7 +61,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Water Lot Remediation Project</h1>
+<h1 id="wb-cont">Water Lot Remediation Project</h1>
         <p>
           The Esqumalt Graving Dock has been used for the repair and maintenance of military and civilian vessels since&nbsp;1927 and has contributed to sediment contamination in the seabed adjacent to the facility. This project will ensure that the water lot is remediated to meet federal and provincial environmental standards.</p>
 		  
