--- a/env/simple-eng.html
+++ b/env/simple-eng.html
@@ -56,7 +56,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Keeping It Simple</h1>
+<h1 id="wb-cont">Keeping It Simple</h1>
       <div class="span-4">
 				<p>The new bubble curtain at the Esquimalt Graving Dock is saving hundreds
 					of salmon and keeping shipyards running smoothly.</p>
