--- a/env/voie-way-eng.html
+++ b/env/voie-way-eng.html
@@ -56,7 +56,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Leading the Way with ISO 14001</h1>
+<h1 id="wb-cont">Leading the Way with ISO 14001</h1>
 				<p>by Dan del Villano</p>
 				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:200px;"><img src="../images/leading-the-way.jpg" alt="" width="200" height="124" /><br />
 					Jim Milne (centre) and Environmental Coordinators, Daryl Lawes and Rae-Ann Shaw, on site at the Esquimalt Graving Dock.</div>When it comes to technology, most people think of machines. Pacific Region's
