--- a/historique-history-eng.html
+++ b/historique-history-eng.html
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>History</h1>
+<h1 id="wb-cont">History</h1>
 				<p>When British Columbia became a province within the Dominion of Canada
 					in&nbsp;1871, the Terms of the Union specified a graving dock be built at Lang
 					Cove. The Colony's economy heavily relied on the commercial shipbuilding
