--- a/merci-thankyou-eng.html
+++ b/merci-thankyou-eng.html
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Thank You</h1>
+<h1 id="wb-cont">Thank You</h1>
 				<p>Your comments have been sent.</p>
 				<p>Thank you for contacting the <a href="/pac/cse-egd/index-eng.html">Esquimalt
 						Graving Dock</a> at Public Works and Government Services Canada. We will
