--- a/rendement-performance-eng.html
+++ b/rendement-performance-eng.html
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Performance Standard</h1>
+<h1 id="wb-cont">Performance Standard</h1>
 				<p>At the Esquimalt Graving Dock (EGD), Public Works and Government Services
 					Canada (PWGSC) will provide in a reasonable manner:</p>
 				<ul>
