--- a/site-eng.html
+++ b/site-eng.html
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Site Map</h1>
+<h1 id="wb-cont">Site Map</h1>
 				<ul>
 					<li><a href="index-eng.html">Esquimalt Graving Dock &ndash; Welcome</li>
 					<li><a href="emp-loc-eng.html">Location</a></li>
