--- a/emp-loc-eng.html
+++ b/emp-loc-eng.html
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Location</h1>
+<h1 id="wb-cont">Location</h1>
 				<p>The Esquimalt Graving Dock is located in Esquimalt at 825&nbsp;Admirals Road
 					 &ndash;  15&nbsp;minutes north of Victoria on the southern
 					tip of Vancouver Island.</p>
