Various QA fixes

--- a/dimensions-eng.html
+++ b/dimensions-eng.html
@@ -103,7 +103,8 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 				</div>
 				<div style="clear:right;">
 				<h2>Technical Information</h2>
-				<table summary="This table provides dimensions for various areas of the dock, in metres" class="basic">
+				<table class="basic">
+          <caption>Dimensions for various areas of the dock, in metres</caption>
 					<tr>
 						<th id="area"> <b>AREA</b> </th>
 						<th id="metres"> <b>METRES</b> </th>
