--- a/dimensions-fra.html
+++ b/dimensions-fra.html
@@ -108,7 +108,8 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 				</div>
 				<div style="clear:right;">
 					<h2>Caract&eacute;ristiques techniques</h2>
-					<table summary="Ce tableau fournit des dimensions pour divers domaines de la cale, en m&egrave;tres" class="basic">
+					<table class="basic">
+            <caption>Dimensions pour divers domaines de la cale, en m&egrave;tres</caption>
 						<tr>
 							<th id="SUPERFICIE"> <b>SUPERFICIE</b></th>
 							<th id="METRES"> <b>M&Egrave;TRES</b></th>
