--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -174,7 +174,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
         <li><a href="barrage-boom-eng.html">Lowering the Boom on Oil Spills</a>&nbsp;(2000)</li>
         <li>
           <a href="voie-way-eng.html"><abbr title="Esquimalt Graving Dock">EGD</abbr>: Leading the Way with
-          <abbr title="International Standards Organization">ISO</abbr>&nbsp;14001</a>&nbsp;(2000)
+          <abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001</a>&nbsp;(2000)
         </li>
       </ul>
 
