--- a/env/projects-projets-eng.html
+++ b/env/projects-projets-eng.html
@@ -15,16 +15,12 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <!-- MetadataStart -->
 <meta name="description" content="Water Lot Remediation Project" />
 <meta name="dcterms.description" content="Water Lot Remediation Project" />
-<meta name="dc.title" content="Water Lot Remediation Project - EGD - PWGSC" />
-<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Environment; Information;  Indexes" />
-
-<meta name="dc.language" scheme="ISO639-2/T" content="eng" />
-<meta name="dc.creator" content="Government of Canada, Public Works and Government Services Canada" />
-<meta name="dc.publisher" content="Government of Canada, Public Works and Government Services Canada" />
-<meta name="dc.rights" content="http://www.tpsgc-pwgsc.gc.ca/comm/ai-in-eng.html" />
-<meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
-<meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
-
+<meta name="dcterms.creator" content="Government of Canada, Public Works and Government Services Canada" />
+<meta name="dcterms.title" content="Water Lot Remediation Project - EGD - PWGSC" />
+<meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
+<meta name="dcterms.modified" title="W3CDTF" content="<!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'-->" />
+<meta name="dcterms.subject" title="gccore" content="Ships; Wharfs; Environment; Information;  Indexes" />
+<meta name="dcterms.language" title="ISO639-2" content="eng" />
 <meta name="keywords" content="Water Lot Remediation Project, environment, management, programs, health, safety" />
 <!-- MetadataEnd -->
 <!--#include virtual="/boew-wet/wet3.0/html5/includes/tete-head.html" -->
@@ -68,7 +64,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 		  
 <p>The project involves three components: dredging the contaminated sediment and disposing of it in licensed landfills; constructing an erosion protection sheet pile wall around the south jetty to isolate the contamination under the jetty; and creating new fish habitat.</p>
 
-<p>The <abbr title="Esqumalt Graving Dock">EGD</abbr> Water Lot Remediation Project is funded by the Federal Contaminated Sites Action Plan, which is coordinated by Environment Canada and the Treasury Board to provide funding to assess and remediate federal contaminated sites.</p>
+<p>The <abbr title="Esquimalt Graving Dock">EGD</abbr> Water Lot Remediation Project is funded by the Federal Contaminated Sites Action Plan, which is coordinated by Environment Canada and the Treasury Board to provide funding to assess and remediate federal contaminated sites.</p>
 
 <p><abbr title="Public Works and Government Services Canada">PWGSC</abbr> proposes to address the major objectives of the project through the following key steps:</p>
 <ul>
