--- a/index-eng.html
+++ b/index-eng.html
@@ -86,7 +86,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 				<li>Canadian vessels &ndash; especially the Department of National Defense and
 					the British Columbia Ferry Corporation.</li>
 			</ul>
-			<p>Our <a href="env/programme-program-eng.html"><abbr title="International Standards Organization">ISO</abbr>&nbsp;14001 environmental management system</a> ensures that work done at the Esquimalt Graving Dock is done in an environmentally responsible manner.<br />
+			<p>Our <a href="env/programme-program-eng.html"><abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001 environmental management system</a> ensures that work done at the Esquimalt Graving Dock is done in an environmentally responsible manner.<br />
           </p>
       </div>
       </div>
