--- a/services-eng.html
+++ b/services-eng.html
@@ -17,7 +17,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <meta name="dcterms.description" content="We are a dynamic full service drydock serving national and international clients 24-hours-a-day, seven days a week, 365 days a year. The Dock provides a full range of ship repair services and amenities like our new stabilizer pockets." />
 <meta name="dcterms.creator" content="Government of Canada, Public Works and Government Services Canada" />
 <meta name="dcterms.title" content="Services - EGD - PWGSC" />
-<meta name="dcterms.issued" title="W3CDTF" content="Date published (YYYY-MM-DD) / Date de publication (AAAA-MM-JJ)" />
+<meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" title="W3CDTF" content="<!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'-->" />
 <meta name="dcterms.subject" title="gccore" content="Ships; Wharfs; Maintenance; Inspection" />
 <meta name="dcterms.language" title="ISO639-2" content="eng" />
