--- a/cn-cu-eng.html
+++ b/cn-cu-eng.html
@@ -61,7 +61,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 				<p><strong> Before you contact us, please read our <a href="#con-pri">Privacy
 				Notice Statement</a>.</strong></p>
 
-				<h2><a>E-mail</a></h2>
+				<h2>E-mail</h2>
 				<p><strong>IMPORTANT:</strong> For reasons of security and privacy, we ask you not to send us any personal information such as your Social Insurance Number (SIN), home or business address, or departmentally-assigned case or file numbers. We would also like you to be aware that we cannot forward e-mail messages on your behalf and that we cannot accept and process changes of address.</p>
 				<p>You can submit your questions and/or comments directly to <a href="mailto:egd-cse@pwgsc-tpsgc.gc.ca">egd-cse@pwgsc-tpsgc.gc.ca</a>.</p>
 				<h2>Form</h2>
