--- a/site-eng.html
+++ b/site-eng.html
@@ -59,7 +59,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-main" role="main"><div id="wb-main-in">
 <h1 id="wb-cont">Site Map</h1>
 				<ul>
-					<li><a href="index-eng.html">Esquimalt Graving Dock &ndash; Welcome</li>
+					<li><a href="index-eng.html">Esquimalt Graving Dock &ndash; Welcome</a></li>
 					<li><a href="emp-loc-eng.html">Location</a></li>
 					<li><a href="services-eng.html">Services</a></li>
 					<li><a href="conduite-conduct-eng.html">Code of Conduct</a></li>
